# napari-IDS

./: .gitignore  LICENSE  README.md  Readme.md  main.py  memo_deploy.md  requirements.txt  setup.cfg  setup.py  tox.ini  video_ui.py  widget.py
Documentation/: improve_refreshment.md
src/: constant.py  dock_widget_live.py  main.py  video_ui.py
src/napari_ids/: __init__.py  _widget.py  napari.yaml  video_ui.py
src/napari_ids/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_writer.py
src/napari_ids/stylesheets/: widget_live.css
