[metadata]
name = napari-IDS
version = 0.0.6
author = Tristan Cotte
author_email = tristan.cotte@sgs.com
url = https://github.com/tcotte/napari-IDS
license = BSD-3-Clause
description = Plug in which enables to take photo with IDS uEye camera
long_description = "file: README.md"
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tcotte/napari-IDS/issues
    Documentation = https://github.com/tcotte/napari-IDS#README.md
    Source Code = https://github.com/tcotte/napari-IDS
    User Support = https://github.com/tcotte/napari-IDS/issues


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    opencv-python

[options.packages.find]
where = src

[options.package_data]
napari-IDS = 
    napari.yaml


[options.entry_points] 
napari.manifest = 
    napari-IDS = napari_ids:napari.yaml
